# WordCard

./: README.md  SailWordCard.py  SailWordCard.spec  aboutWin.py  aboutWin.ui  build.bat  core.py  img.qrc  img_rc.py  mainWin.py  mainWin.ui  pyproject.toml  update.py
docs/: CNAME  index.html
